httpserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: httpserver
  name: httpserver
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: powerfj314150/httpserver:v1
        imagePullPolicy: IfNotPresent
        name: httpserver
        resources: 
          limits:
            cpu: 800m
            memory: 1024Mi
          requests: 
            cpu: 500m
            memory: 512Mi
        readinessProbe:
          httpGet: 
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 30
          timeoutSeconds: 15
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 30
          timeoutSeconds: 15
      restartPolicy: Always
