httpserver-service.yaml
apiVersion: v1
kind: Service
metadata: 
 name: httpserver-svc
 namespace: default
spec:
 type: ClusterIP
 ports: 
 - name: http
   port: 80
   protocol: TCP
   targetPort: 8080
 selector:
   app: httpserver
